# asteroids

./: .gitignore  CMakeLists.txt  README.md
code/: base_post_shader.cpp  blur_shader.cpp  components.h  defs.h  entity.h  font.h  game.cpp  game.h  game_input.h  input.cpp  light_uniforms.cpp  light_uniforms.h  main.cpp  memory.h  particle_shader.cpp  particles.cpp  particles.h  platform.cpp  platform.h  platform_input.h  queues.cpp  queues.h  render_commands.h  systems.cpp  systems.h  tags.h  text_shader.cpp  vertex_shader.cpp
code/audio/: audio.cpp  audio.h  audio_commands.cpp  audio_commands.h  platform_audio.cpp
code/game/entities/: entities.cpp  entities.h
code/scenes/: scene.cpp  scene.h  scene_game.cpp  scene_game.h  scene_pause.cpp  scene_pause.h  scene_start.cpp  scene_start.h
code/ui/: button.cpp  button.h
